# applied-ml-teaching-copilot

./: README.md  pyproject.toml
data/: course_materials.json
notebooks/: 01-setup.ipynb  02-rag.ipynb  03_agentic_teaching_copilot.ipynb
