[project]
name = "applied-ml-teaching-copilot"
version = "0.1.0"
description = "An AI assistant for instructors and students working with Applied Machine Learning course materials"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.0.0",
    "minsearch>=0.0.5",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
]
